Fixed url to fonts and fixed url to arrow icon in footer

--- a/css/main.css
+++ b/css/main.css
@@ -364,7 +364,7 @@ a {
     top: 55%;
     color: rgba(255, 255, 255, 0);
     transform: translateY(-50%);
-    background: url("../../images/icons/other/arrow-down-300.svg");
+    background: url("../images/icons/other/arrow-down-300.svg");
     background-size: cover;
     background-repeat: no-repeat;
     right: 1rem;
@@ -651,17 +651,17 @@ img {
   font-family: "open-sans-regular";
   font-weight: normal;
   font-style: normal;
-  src: url("../../font/open-sans-regular.woff") format("woff"), url("../../font/open-sans-regular.woff2") format("woff2");
+  src: url("../font/open-sans-regular.woff") format("woff"), url("../font/open-sans-regular.woff2") format("woff2");
 }
 @font-face {
   font-family: "open-sans-bold";
   font-weight: bold;
   font-style: normal;
-  src: url("../../font/open-sans-bold.woff") format("woff"), url("../../font/open-sans-bold.woff2") format("woff2");
+  src: url("../font/open-sans-bold.woff") format("woff"), url("../font/open-sans-bold.woff2") format("woff2");
 }
 @font-face {
   font-family: "open-sans-condensed-bold";
   font-weight: bold;
   font-style: condensed;
-  src: url("../../font/open-sans-condensed-bold.woff") format("woff"), url("../../font/open-sans-condensed-bold.woff2") format("woff2");
+  src: url("../font/open-sans-condensed-bold.woff") format("woff"), url("../font/open-sans-condensed-bold.woff2") format("woff2");
 }/*# sourceMappingURL=main.css.map */
