--- a/css/scss/_site-footer.scss
+++ b/css/scss/_site-footer.scss
@@ -129,7 +129,7 @@
       color: rgba(255, 255, 255, 0);
 
       transform: translateY(-50%);
-      background: url("../../images/icons/other/arrow-down-300.svg");
+      background: url("../images/icons/other/arrow-down-300.svg");
       background-size: cover;
       background-repeat: no-repeat;
       right: 1rem;
