--- a/css/scss/_site-header.scss
+++ b/css/scss/_site-header.scss
@@ -18,6 +18,7 @@ header {
   align-items: center;
   justify-content: space-between;
   font-size: 0.75rem;
+  z-index: -2;
 }
 
 label.open-left-sidebar-button {
@@ -46,7 +47,7 @@ a {
   overflow: hidden;
 
   a {
-    padding: 0.4rem 0.4rem;
+    padding: 0.5rem 0.4rem;
     margin-right: 0.4rem;
 
     border: 1px solid $border-color-02;
