--- a/css/scss/_homepage.scss
+++ b/css/scss/_homepage.scss
@@ -19,7 +19,7 @@
   p {
     white-space: nowrap;
     padding: 0 4rem;
-    animation: scroll 12s linear infinite;
+    animation: scroll 20s linear infinite;
   }
 }
 
@@ -96,7 +96,7 @@
     user-select: none;
   }
 
-  a {
+  span.homepage-button {
     font-size: 0.75rem;
     line-height: 4rem;
     padding: 0.5rem 1.5rem;
@@ -122,7 +122,7 @@
     color: $secondary-color;
     //text-shadow: 1px 1px 10px rgb(101, 101, 101);
   }
-  & .white-button {
+  & span.white-button {
     border-color: $secondary-color;
     &:hover {
       border: 1px solid $border-color-02;
